[gd_scene load_steps=4 format=3 uid="uid://4ucbadkjd5g2"]

[ext_resource type="Script" uid="uid://c37lwlh1qqp2d" path="res://family_tree/family_tree.gd" id="1_f8xb0"]
[ext_resource type="Script" uid="uid://ct2qg6vbjugxx" path="res://family_tree/tree_camera.gd" id="2_lw71b"]
[ext_resource type="Script" uid="uid://xtm3a42nfmik" path="res://family_tree/family_node_highlight.gd" id="3_jr5cc"]

[node name="FamilyTree" type="Node2D"]
script = ExtResource("1_f8xb0")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0.871094, 0.366943)
script = ExtResource("2_lw71b")

[node name="ColorRect" type="ColorRect" parent="Camera"]
z_index = -3
custom_minimum_size = Vector2(1000, 1000)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.223103, 0.223103, 0.223103, 1)

[node name="SelectHighlight" type="Node2D" parent="."]
script = ExtResource("3_jr5cc")
color = Color(1, 1, 1, 0.501961)

[node name="HoverHighlight" type="Node2D" parent="."]
script = ExtResource("3_jr5cc")
color = Color(1, 1, 1, 0.215686)

[node name="HUD" type="CanvasLayer" parent="."]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="SpinBox" type="SpinBox" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
